--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
+    "react-loader-spinner": "^4.0.0",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
